--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="img/Pics/OL.png">
-  <title>EMOTES / LATINOWNED</title>
+  <title>JACZ EMOTES / LATINOWNED</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -46,78 +46,15 @@
            </section>
            <div class="clearfix-padding"></div>
            <section class="sliderP" id="PROMOCIONES">
-             <p>INSTRUCCIONES (GIRA A LA IZQUIERDA)</p>
+             <p>FELICIDADES</p>
              <ul class="slider1">
-               <li><img src="img/1.png" alt=""></li>
-               <li><img src="img/2.png" alt=""></li>
-               <li><img src="img/3.png" alt=""></li>
-               <a href="https://www.instagram.com/jacz_emotes/" target="_blank">
-                     <img src="img/4.png" alt=""></a>
+               <li><img src="img/EMOTES.gif" alt=""></li>
              </ul>
+             <a href="https://jaczemotes-latinowned.github.io/JaczEmotes-LO/">
+             <u> DA CLICK AQUI PARA IR A LA SECCION DE EMBLEMAS Y ELEGIR UNO EN CASO DE APROVECHAR EL CUPON</u></a>
            </section>
              <div class="clearfix-padding"></div>
-<section class="Menus">
-  <p>Pack Hollow Knigth</p>
-<img src="img/5.png" />
-</section>
-<section class="Menus">
-  <p>Pack Fortnite</p>
-<img src="img/9.png" />
-</section>
-<section class="Menus">
-  <p>Pack Little Nigthmares</p>
-<img src="img/7.png" />
-</section>
-<section class="Menus">
-  <p>Pack Super Smash Bros</p>
-<img src="img/8.png" />
-</section>
-<section class="Menus">
-  <p>Pack Spiderman</p>
-<img src="img/11.png" />
-</section>
-<section class="Menus">
-  <p>Pack Naruto</p>
-<img src="img/6.png" />
-</section>
-<section class="Menus">
-  <p>Pack Pokemon</p>
-<img src="img/10.png" />
-</section>
-<div class="clearfix-padding"></div>
-<div class="j">
-  <p1>Pagina</p1>
-<a href="https://jaczemotes.github.io/EMOTES/">
-<u> 1 </u></a>
-</div>
-<Ei>
-<a href="https://www.instagram.com/jacz_emotes/" target="_blank">
-      <img src="img/EGG.gif" alt=""></a></Ei>
 
-<div class="clearfix-padding"></div>
-<div class="content-img">
-    <a href="https://www.facebook.com/Jaczemotes">
-    <img src="img/Pics/COT.png">
-    <div class="content-txt">
-        <h2>JACZ EMOTES</h2>
-        <p>¡Cotiza aqui y ahora, el pedido que quieras! Horarios de atención: 2pm - 6am hora MX</p>
-    </div>
-
-    <div class="content-1"></div>
-    <div class="content-2"></div>
-    <div class="content-3"></div>
-    <div class="content-4"></div>
-  </a>
-</div>
-<div class="clearfix-padding"></div>
-<section class="FPI">
-       <h3>Formas de pago</h3>
-
-               <img src="img/Pics/FP1.png" />
-               <img src="img/Pics/FP2.png" />
-               <img src="img/Pics/FP3.png" />
-               <div class="clearfix-padding"></div>
-                 </section>
      <!-- FOOTER -->
      <footer>
        <div class="banner-wrapper">
