--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="img/Pics/OL.png">
-  <title>JACZ EMOTES / LATINOWNED</title>
+  <title>JACZ EMOTES / EMOTES GRATIS</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -46,13 +46,15 @@
            </section>
            <div class="clearfix-padding"></div>
            <section class="sliderP" id="PROMOCIONES">
-             <p>FELICIDADES</p>
+             <a href="https://www.mediafire.com/view/v67y08sfjia7ezh/244805665_899353744120081_7011937841274451582_n_%25281%2529.png/file">
              <ul class="slider1">
-               <li><img src="img/EMOTES.gif" alt=""></li>
-             </ul>
-             <a href="https://jaczemotes-latinowned.github.io/JaczEmotes-LO/">
-             <u> DA CLICK AQUI PARA IR A LA SECCION DE EMBLEMAS Y ELEGIR UNO EN CASO DE APROVECHAR EL CUPON</u></a>
+               <li><img src="img/G.png" alt=""></li>
+             </ul></a>
            </section>
+           <section class="slider" id="Banners">
+              <a href="https://www.paypal.com/paypalme/jacz1707" target="_blank">
+                    <img src="img/PAY.png" alt=""></a>
+                </section>
              <div class="clearfix-padding"></div>
 
      <!-- FOOTER -->
