--- a/index.html
+++ b/index.html
@@ -40,22 +40,30 @@
           </nav>
         </div>
       </header>
+      <section class="sliderpub3" id="Banners">
+        <a href="https://www.paypal.com/paypalme/jacz1707" target="_blank">
+                      <img src="img/Pics/PY.png" alt=""></a>
+     </section>
       <section class="slider" id="Banners">
          <a href="https://www.tiktok.com/@jaczclips/video/6975810462562667781?lang=es&is_copy_url=0&is_from_webapp=v1&sender_device=pc&sender_web_id=6893150771103073798" target="_blank">
                <img src="img/Pics/PUB.gif" alt=""></a>
            </section>
            <div class="clearfix-padding"></div>
            <section class="sliderP" id="PROMOCIONES">
-             <a href="https://www.mediafire.com/view/v67y08sfjia7ezh/244805665_899353744120081_7011937841274451582_n_%25281%2529.png/file">
              <ul class="slider1">
-               <li><img src="img/G.png" alt=""></li>
-             </ul></a>
+                     <li><img src="img/Pics/S.gif" alt=""></li>
+                     <li><img src="img/Pics/S.png" alt=""></li>
+             </ul>
            </section>
-           <section class="slider" id="Banners">
-              <a href="https://www.paypal.com/paypalme/jacz1707" target="_blank">
-                    <img src="img/PAY.png" alt=""></a>
-                </section>
+           <section class="sliderpub2" id="Banners">
+           <a href="https://www.messenger.com/t/100043896229862/">
+           <img src="img/Pics/PEDIR.png" alt=""></a>
+          </section>
              <div class="clearfix-padding"></div>
+             <section class="sliderpub2" id="Banners">
+              <img src="img/Pics/PUB2.gif" alt="">
+            </section>
+               <div class="clearfix-padding"></div>
 
      <!-- FOOTER -->
      <footer>
