--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
            <div class="clearfix-padding"></div>
            <section class="sliderP" id="PROMOCIONES">
              <ul class="slider1">
+
                      <li><img src="img/Pics/S.gif" alt=""></li>
                      <li><img src="img/Pics/S.png" alt=""></li>
              </ul>
+             <p>Dale like a la pagina para obtener uno de los emotes que mas te gusto</p>
+              <div class="fb-like" data-href="https://www.facebook.com/Jaczemotes" data-width="100" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
            </section>
+                <div class="clearfix-padding"></div>
            <section class="sliderpub2" id="Banners">
            <a href="https://www.messenger.com/t/100043896229862/">
            <img src="img/Pics/PEDIR.png" alt=""></a>
@@ -63,8 +67,8 @@
              <section class="sliderpub2" id="Banners">
               <img src="img/Pics/PUB2.gif" alt="">
             </section>
-               <div class="clearfix-padding"></div>
 
+               <div class="clearfix-padding"></div>
      <!-- FOOTER -->
      <footer>
        <div class="banner-wrapper">
@@ -118,6 +122,10 @@
          });
        });
      </script>
+     <div id="fb-root"></div>
+     <div id="fb-root"></div>
+     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0" nonce="s4syactG"></script>
      </div>
 </body>
-</html>
+</html><div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0" nonce="s4syactG"></script>
