--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            </section>
                 <div class="clearfix-padding"></div>
            <section class="sliderpub2" id="Banners">
-           <a href="https://www.messenger.com/t/100043896229862/">
+           <a href="m.me/Jaczemotes">
            <img src="img/Pics/PEDIR.png" alt=""></a>
           </section>
              <div class="clearfix-padding"></div>
