--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                      <li><img src="img/Pics/S.gif" alt=""></li>
                      <li><img src="img/Pics/S.png" alt=""></li>
              </ul>
-             <p>Dale like a la pagina para obtener uno de los emotes que mas te gusto</p>
+             <p>Dale like a la pagina para obtener los emotes antes de descargarlos</p>
               <div class="fb-like" data-href="https://www.facebook.com/Jaczemotes" data-width="100" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
            </section>
                 <div class="clearfix-padding"></div>
            <section class="sliderpub2" id="Banners">
-           <a href="https://m.me/Jaczemotes" target="_blank">
+           <a href="https://www.mediafire.com/folder/n4yzpw2lyh9bt/EMOTES+GRATIS" target="_blank">
            <img src="img/Pics/PEDIR.png" alt=""></a>
           </section>
              <div class="clearfix-padding"></div>
