--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="img/Pics/OL.png">
-  <title>JACZ EMOTES / EMOTES GRATIS</title>
+  <link rel="icon" href="img/Pics/O.png"
+  <meta charset="utf-8">
+  <title>JACZ EMOTES / COMISIONES </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css">
 </head>
   <div id="contenido">
 <body>
@@ -20,9 +20,8 @@
     <div id="banner-wrapper">
       <header>
         <div id="header-inner">
-          <a href="https://jaczemotes.github.io/JACZ.EMOTES/" id="logo">
+          <a href="#" id="logo">
             <img src="img/Pics/O.png" />
-            <img src="img/Pics/OL.png" />
           </a>
 
           <nav>
@@ -30,101 +29,106 @@
               <i class="fa fa-bars"></i>
             </a>
             <ul>
-              <li><a href="https://jaczemotes.github.io/JACZ.EMOTES/" class="current">Home</a></li>
-              <li><a href="https://comisionesjacz.github.io/COMISIONESJACZ/">Comisiones</a></li>
-              <li><a href="https://jaczemotesstream.github.io/Jaczemotes/">Streams</a></li>
-              <li><a href="https://jaczemotes-latinowned.github.io/JaczEmotes-LO/">LATIN OWNED</a></li>
-              <li><a href="https://jaczemote.github.io/JACZEMOTES/">Promociones</a></li>
-              <li><a href="https://jaczemote.github.io/JACZ-EMOTES/">INFORMACION</a></li>
+              <li>
+<li><a href="https://jaczemotes.github.io/JACZ.EMOTES/" class="current">Home</a></li>
+            <li><a href="https://comisionesjacz.github.io/COMISIONESJACZ/">Comisiones</a></li>
+            <li><a href="https://jaczemotesstream.github.io/Jaczemotes/">Streams</a></li>
+            <li><a href="https://jaczemote.github.io/JACZEMOTES/">Promociones</a></li>
+            <li><a href="https://jaczemote.github.io/JACZ-EMOTES/">INFORMACION</a></li>
+              <li>
             </ul>
           </nav>
         </div>
       </header>
-      <section class="sliderpub3" id="Banners">
-        <a href="https://www.paypal.com/paypalme/jacz1707" target="_blank">
-                      <img src="img/Pics/PY.png" alt=""></a>
-     </section>
-      <section class="slider" id="Banners">
-         <a href="https://www.tiktok.com/@jaczclips/video/6975810462562667781?lang=es&is_copy_url=0&is_from_webapp=v1&sender_device=pc&sender_web_id=6893150771103073798" target="_blank">
-               <img src="img/Pics/PUB.gif" alt=""></a>
-           </section>
-           <div class="clearfix-padding"></div>
-           <section class="sliderP" id="PROMOCIONES">
-             <ul class="slider1">
+  <section class="sliderpub" id="Banners">
+     <a href="https://www.twitch.tv/jacz_emotes" target="_blank">
+           <img src="img/Pics/PUB.gif" alt=""></a>
+       </section>
+         <div class="clearfix-padding"></div>
+      <!-- SLIDER -->
+      <div id="contenidoC">
 
-                     <li><img src="img/Pics/S.gif" alt=""></li>
-             </ul>
-             <p>Dale like a la pagina para obtener los emotes antes de descargarlos</p>
-              <div class="fb-like" data-href="https://www.facebook.com/Jaczemotes" data-width="100" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
-           </section>
+ <div id="1">
+      <div id="slide-wrap">
+        <section class="slider" id="EMOTES">
+          <p> EMOTES</p>
+          <img src="img/Pics/S.gif" alt="">
+        </section>
+      </div>
+    </div>
+
+        </section>
                 <div class="clearfix-padding"></div>
-           <section class="sliderpub2" id="Banners">
-           <a href="https://www.mediafire.com/folder/n4yzpw2lyh9bt/EMOTES+GRATIS" target="_blank">
-           <img src="img/Pics/PEDIR.png" alt=""></a>
-          </section>
-             <div class="clearfix-padding"></div>
-             <section class="sliderpub2" id="Banners">
-              <img src="img/Pics/PUB2.gif" alt="">
-            </section>
+                <section class="sliderpub2" id="Banners">
+                <a href="https://www.twitch.tv/jacz_emotes" target="_blank">
+                   <img src="img/Pics/ME.png" alt=""></a>
+                </section>
 
-               <div class="clearfix-padding"></div>
-     <!-- FOOTER -->
-     <footer>
-       <div class="banner-wrapper">
-         <div class="icon-text">
-           <div class="icon-text-icon">
-             <ul class="footer-nav">
-               <li><a href="https://jaczemotes.github.io/JACZ.EMOTES/" class="current">Home</a></li>
-               <li><a href="https://jaczemotes-latinowned.github.io/JaczEmotes-LO/">LATIN OWNED</a></li>
-               <li><a href="https://comisionesjacz.github.io/COMISIONESJACZ/">Comisiones</a></li>
-               <li><a href="https://jaczemotesstream.github.io/Jaczemotes/">Streams</a></li>
-               <li><a href="https://jaczemote.github.io/JACZEMOTES/">Promociones</a></li>
-               <li><a href="https://jaczemote.github.io/JACZ-EMOTES/">INFORMACION</a></li>
-             </ul>
-           </div>
-           <div class="icon-text-text">
-             <ul class="social">
-               <li>
-                 <a href="mailto:jacshdbajd@gmail.com" target="_blank">
-                           <i class="fa fa-envelope-o"></i>
-                         </a>
-                        </li>
-                        <li>
-                         <a href="https://www.facebook.com/Jaczemotes" target="_blank">
-                           <i class="fa fa-facebook"></i>
-                          </a>
-                        </li>
-                        <li><a href="https://www.instagram.com/jacz_emotes/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                          <li><a href="https://twitter.com/Jacz_emotes" target="_blank"><i class="fa fa-twitter"></i></a></li>
-             </ul>
-           </div>
-         </div>
-       </div>
-     </footer>
-     <footer class="second">
-       <p>
-         &copy; <a href="https://jaczemotes.github.io/JACZ.EMOTES/" target="_blank">JACZ EMOTES</a>
-       </p>
-     </footer>
+    <div class="clearfix-padding"></div>
+  <div class="clearfix-padding"></div>
+  <!-- FOOTER -->
+  <footer>
+    <div class="banner-wrapper">
+      <div class="icon-text">
+        <div class="icon-text-icon">
+          <ul class="footer-nav">
+<li><a href="https://jaczemotes.github.io/JACZ.EMOTES/" class="current">Home</a></li>
+            <li><a href="https://comisionesjacz.github.io/COMISIONESJACZ/">Comisiones</a></li>
+            <li><a href="https://jaczemotesstream.github.io/Jaczemotes/">Streams</a></li>
+            <li><a href="https://jaczemote.github.io/JACZEMOTES/">Promociones</a></li>
+            <li><a href="https://jaczemote.github.io/JACZ-EMOTES/">INFORMACION</a></li>
+            </ul>
+        </div>
+        <div class="icon-text-text">
+          <ul class="social">
+            <ul class="social">
+              <li>
+               <a href="https://www.twitch.tv/jacz_emotes" target="_blank">
+                 <i class="fa fa-twitch"></i>
+                </a>
+              </li>
+              <li>
+            <li>
+              <a href="mailto:jacshdbajd@gmail.com" target="_blank">
+                        <i class="fa fa-envelope-o"></i>
+                      </a>
+                     </li>
+                     <li>
+                      <a href="https://www.facebook.com/Jaczemotes" target="_blank">
+                        <i class="fa fa-facebook"></i>
+                       </a>
+                     </li>
+                     <li>
+                        <a href="https://www.instagram.com/jacz_emotes/" target="_blank">
+                        <i class="fa fa-instagram"></i>
+              </a>
+            </li>
+            <li><a href="https://twitter.com/Jacz_emotes" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <footer class="second">
+    <p>
+      &copy; <a href="index.html" target="_blank">JACZ EMOTES</a>
+    </p>
+  </footer>
 
-     <!-- SCRIPTS -->
-     <script>
-       $(document).ready(function(){
-         $('.slider1').bxSlider({
-           mode: 'fade',
-         });
-         $('.slider2').bxSlider({
-           mode: 'fade',
-         });
-         $('.slider3').bxSlider({
-           mode: 'fade',
-         });
-       });
-     </script>
-     <div id="fb-root"></div>
-     <div id="fb-root"></div>
-     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0" nonce="s4syactG"></script>
-     </div>
+  <!-- SCRIPTS -->
+  <script>
+    $(document).ready(function(){
+      $('.slider1').bxSlider({
+        mode: 'fade',
+      });
+      $('.slider2').bxSlider({
+        mode: 'fade',
+      });
+      $('.slider3').bxSlider({
+        mode: 'fade',
+      });
+    });
+  </script>
 </body>
-</html><div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v12.0" nonce="s4syactG"></script>
+</div>
+</html>
